<resources>
    <string name="app_name">Popular Movies App</string>
    <string name="no_connection_err_msg">No internet connection.\nPlease try again later !</string>
    <string name="no_data_err_msg">No data available !</string>
    <string name="release_date_label">Release Date:</string>
    <string name="average_rating_label">Average Rating:</string>
    <string name="vote_count_label">Vote Count:</string>
    <string name="dummy_data">N/A</string>
    <string name="dummy_movie_summary">Summary: N/A</string>
    <string name="sort_by_popular_movie_menu">SortBy: Popularity</string>
    <string name="sort_by_top_rated_menu">SortBy: Top Rated</string>
    <string name="movie_details_label">Movie Details</string>
    <string name="movie_poster_content_description">Movie Poster</string>
    <string name="dummy_video_label">Trailer Video</string>
    <string name="dummy_reviewer_name_text">Author Name</string>
    <string name="dummy_review_text">Review text goes here. A lot of content will go here. This is just dummy content for testing</string>

    <string name="summary_title">Plot Synopsis</string>
    <string name="trailers_title">Trailers</string>
    <string name="reviews_title">Reviews</string>
    <string name="favorite_option_title">Favorite</string>
    <string name="sortby_my_favorites">SortBy: My Favorites</string>
    <string name="intent_chooser_title">Share link!</string>

</resources>
