<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_poster_image_view"
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_height"
                android:contentDescription="@string/movie_poster_content_description"
                android:scaleType="fitXY"
                android:src="@drawable/default_poster_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_medium"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/LabelStyle"
                    android:text="@string/release_date_label" />

                <TextView
                    android:id="@+id/movie_release_date_tv"
                    style="@style/TextViewStyle"
                    tools:text="@string/dummy_data" />

                <TextView
                    style="@style/LabelStyle"
                    android:text="@string/average_rating_label" />

                <TextView
                    android:id="@+id/movie_rating_tv"
                    style="@style/TextViewStyle"
                    tools:text="@string/dummy_data" />

                <TextView
                    style="@style/LabelStyle"
                    android:text="@string/vote_count_label" />

                <TextView
                    android:id="@+id/movie_vote_count_tv"
                    style="@style/TextViewStyle"
                    tools:text="@string/dummy_data" />

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/sliding_tabs"
            style="@style/CategoryTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</ScrollView>